# cooplan-definition-git-downloader

./: Cargo.toml
src/: downloader.rs  error.rs  lib.rs  version_detector.rs
