[package]
name = "cooplan-definition-git-downloader"
version = "0.1.0"
edition = "2021"
description = "Common utility for downloading definitions through Git"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

git2 = "0.15.0"

serde = { version = "1.0.141", features = ["derive"] }
serde_json = "1.0.82"